fix: widths and scrollbar overflow

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,6 +5,6 @@
   .app {
     max-width: $max-width-content;
     margin: 0 auto;
-    width: 100vw;
+    width: 100%;
   }
 }
