--- a/src/sections/Main/Main.module.scss
+++ b/src/sections/Main/Main.module.scss
@@ -58,10 +58,9 @@
     }
 
     @media screen and (max-width: $absolute-break) {
-      width: 100%;
       padding: $spacing-3xl $spacing-l;
       padding-top: 158px;
-      height: 100vh;
+      min-height: 100vh;
     }
   }
 }
