--- a/src/sections/Sticky/Sticky.module.scss
+++ b/src/sections/Sticky/Sticky.module.scss
@@ -36,7 +36,6 @@
         max-width: 1023px;
         animation: fadeIn 0.5s ease-in-out forwards;
         @media screen and (max-width: $max-width-content) {
-          width: 100vw;
           height: 100vh;
           object-fit: cover;
           background-size: cover;
@@ -45,7 +44,6 @@
       .copyright {
         width: 1023px;
         @media screen and (max-width: $max-width-content) {
-          width: 100vw;
         }
         p {
           color: rgba(0, 0, 0, 0.3);
@@ -59,7 +57,6 @@
       height: fit-content;
       padding-bottom: 100vh;
       @media screen and (max-width: $max-width-content) {
-        width: 100vw;
         margin: 0;
       }
       .container {
@@ -68,7 +65,7 @@
         border-radius: $border-radius;
         padding: $spacing-xl $spacing-l;
         @media screen and (max-width: $max-width-content) {
-          width: calc(100vw - $spacing-2xl);
+          width: calc(100% - $spacing-2xl);
           margin: 0 $spacing-l;
           padding: $spacing-l;
         }
